Correct right alignment of "powered by jekyll"

--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ footer ul {
     text-align: left;
 }
 
-footer ul jek {
+footer ul div {
     text-align: right;
 }
 
